# AchoraoAgentSmart-EXE

./: .gitignore  AchoraoAgent.csproj  CMakeLists.txt  Program.cs  README.md  app.manifest  app.py
src/: AchoraoEngine.cpp  AchoraoEngine.h  Agent.cpp  Agent.h  DiagnosticEngine.cpp  DiagnosticEngine.h  DiskInfo.cpp  DiskInfo.h  EraseEngine.cpp  EraseEngine.h  GpuModule.cpp  GpuModule.h  HttpClient.cpp  HttpClient.h  Logger.cpp  Logger.h  MemoryModule.cpp  MemoryModule.h  Models.h  PrivilegeManager.cpp  PrivilegeManager.h  StorageModule.cpp  StorageModule.h  main.cpp
